Organizando pastas e arquivos

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "npx tailwindcss -i ./styles/styles.css -o ./src/css/styles.css --watch"
+    "dev": "npx tailwindcss -i ./styles/styles.css -o ./css/styles.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.14"
